# LittleEngineOOP

./: CMakeLists.txt
include/LittleEngine/Core/: Time.h
include/LittleEngine/Core/App/: App.h
include/LittleEngine/Core/Game/: IGame.h
include/LittleEngine/Core/Log/: Log.cpp  Log.h
include/LittleEngine/Core/Time/: Time.h
include/LittleEngine/Rendering/: Device.h
include/Window/: Window.h
src/Core/: Time.cpp
src/Core/App/: App.cpp
src/Core/Game/: IGame.cpp
src/Core/Log/: Log.cpp
src/Core/Time/: Time.cpp
src/Rendering/: Device.cpp
src/Window/: Window.cpp
